--- a/Anonymizer/Anonymizer.vcxproj
+++ b/Anonymizer/Anonymizer.vcxproj
@@ -91,6 +91,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="commonOperation.cpp" />
     <ClCompile Include="Thread_anonymizeNoSuffix.cpp" />
     <ClCompile Include="Anonymizer.cpp" />
     <ClCompile Include="compressAndUncompress.cpp" />
@@ -109,10 +110,11 @@
     <QtRcc Include="Anonymizer.qrc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Thread_anonymizeNoSuffix.h" />
+    <QtMoc Include="commonOperation.h" />
+    <QtMoc Include="Thread_anonymizeNoSuffix.h" />
     <ClInclude Include="compressAndUncompress.h" />
     <ClInclude Include="testZip.h" />
-    <ClInclude Include="Thread_anonymizeZip.h" />
+    <QtMoc Include="Thread_anonymizeZip.h" />
     <QtMoc Include="Thread_DCMTK_anonymizeDCM.h" />
   </ItemGroup>
   <ItemGroup>
