--- a/Anonymizer/Anonymizer.vcxproj.filters
+++ b/Anonymizer/Anonymizer.vcxproj.filters
@@ -43,12 +43,24 @@
     <ClCompile Include="Thread_anonymizeNoSuffix.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="commonOperation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Anonymizer.h">
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="Thread_DCMTK_anonymizeDCM.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="commonOperation.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="Thread_anonymizeZip.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="Thread_anonymizeNoSuffix.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
@@ -70,12 +82,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="compressAndUncompress.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Thread_anonymizeZip.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Thread_anonymizeNoSuffix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
